--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,36 @@
-.header {
-    width: 100%;
-    height: 60px;
-    background-color: rgb(30, 55, 109);
-    position: relative;
-}
-.logo {
-    width: 60px;
-    float: left;
+* {
     margin: 0px;
+    padding: 0px;
+}
+
+body {
+    background-color: rgb(187, 195, 218);
+    width: 1024px;
+    margin: 0 auto;
+}
+
+article {
+    margin: 0px 20px;
+}
+
+header {
+    width: 1024px;
+    background-color: rgb(164, 191, 252);
+    display: flex;
+    position: fixed;
+    border-bottom: 4px solid rgb(1, 47, 155);
+}
+
+.logo {
+    margin: 10px 10px 0px 10px;
+}
+
+.text-logo {
+    margin: 20px 0px 0px 0px;
+    font-size: 30px;
+    color: rgb(0, 136, 170);
+}
+
+h1 {
+    padding-top: 90px;
 }
